<resources>
    <string name="app_name">Sensors</string>
    <string name="xaxis">X axis</string>
    <string name="yaxis">Y axis</string>
    <string name="zaxis">Z axis</string>
    <string name="lat">Latitude: </string>
    <string name="lon">Longitude:</string>
    <string name="acc">Accelerometer</string>
    <string name="gps">GPS</string>
    <string name="wifi">Wi-Fi</string>
    <string name="microphone">Microphone</string>
    <string name="fetch">Fetch data</string>
    <string name="getLoc">Get Location</string>
    <string name="scnWifi">Scan Wifi</string>
    <string name="recordaudio">Record Audio</string>
    <string name="recordit">Record it!</string>
    <string name="stopit">Stop it!</string>
    <string name="play">Play area</string>
    <string name="playit">Play</string>
    <string name="stop">Stop</string>

</resources>
