<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MT19097_Main5Activity"
    android:background="#99CB55EB"
    android:orientation="vertical"
    android:layout_gravity="center"
    >

    <TextView
        android:text="@string/recordaudio"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnStartRecord"
        android:text="@string/recordit"
        android:layout_gravity="center"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnStopRecord"
        android:layout_gravity="center"
        android:text="@string/stopit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/play"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnPlay"
        android:layout_gravity="center"
        android:text="@string/playit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_gravity="center"
        android:id="@+id/btnStop"
        android:text="@string/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--<Button
        android:id="@+id/fetchAudio"
        android:layout_marginTop="50dp"
        android:text="@string/fetch"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:id="@+id/textAudio"/>
    </ScrollView>-->
</LinearLayout>