<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7EFF903B"
    android:orientation="vertical"
    tools:context=".MT19097_MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_gravity="center"
        android:layout_width="270dp"
        android:textSize="18dp"
        android:layout_height="70dp"
        android:layout_marginTop="200dp"
        android:text="@string/acc"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="167dp" />

    <Button
        android:id="@+id/button2"
        android:layout_gravity="center"
        android:textSize="18dp"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:text="@string/gps"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="296dp" />

    <Button
        android:id="@+id/button3"
        android:layout_gravity="center"
        android:layout_width="270dp"
        android:textSize="18dp"
        android:layout_height="70dp"
        android:text="@string/wifi"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="419dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="270dp"
        android:textSize="18dp"
        android:layout_height="70dp"
        android:text="@string/microphone"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="527dp" />
</LinearLayout>