<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#7700BCD4"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MT19097_Main3Activity">

    <Button
        android:id="@+id/locationbutton"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getLoc" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lat"
            android:layout_marginTop="50dp"
            android:textSize="18dp"
            android:layout_marginLeft="50dp"/>
        <TextView
            android:id="@+id/LatitudeTextview"
            android:layout_width="wrap_content"
            android:textSize="16dp"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lon"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"/>
        <TextView
            android:id="@+id/LongitudeTextview"
            android:layout_width="wrap_content"
            android:textSize="16dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/fetch"
        android:id="@+id/fetch"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fetchtext"/>
    </ScrollView>

</LinearLayout>